5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1650_2449.log
== TEST (2019-04-15 09:44:12) 
-- CODE:
a=float(input("digite um valor: "))
b=float(input("digite um valor: "))
c=float(input("digite um valor: "))
d=float(input("digite um valor: "))
e=float(input("digite um valor: "))
f=float(input("digite um valor: "))
z=(c*e-b*f)
x=z/(a*e-b*d)
V=(a*f-c*d)
y=v/(a*e-b*d)
if(x!=z/0),(y!=v/0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
File "XXXX", line 11
    if(x!=z/0),(y!=v/0):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:50:14) 
-- CODE:
a=float(input("digite um valor: "))
b=float(input("digite um valor: "))
c=float(input("digite um valor: "))
d=float(input("digite um valor: "))
e=float(input("digite um valor: "))
f=float(input("digite um valor: "))
z=(c*e-b*f)
x=z/(a*e-b*d)
V=(a*f-c*d)
y=v/(a*e-b*d)
if(x!=z/0):
	print(x)
if(y!=v/0):
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=z/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:50:49) 
-- CODE:
a=float(input("digite um valor: "))
b=float(input("digite um valor: "))
c=float(input("digite um valor: "))
d=float(input("digite um valor: "))
e=float(input("digite um valor: "))
f=float(input("digite um valor: "))
z=(c*e-b*f)
x=z/(a*e-b*d)
v=(a*f-c*d)
y=v/(a*e-b*d)
if(x!=z/0):
	print(x)
if(y!=v/0):
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=z/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:53:17) 
-- CODE:
a=float(input("digite um valor: "))
b=float(input("digite um valor: "))
c=float(input("digite um valor: "))
d=float(input("digite um valor: "))
e=float(input("digite um valor: "))
f=float(input("digite um valor: "))
z=(c*e-b*f)
x=z/m
v=(a*f-c*d)
m=(a*e-b*d)
y=v/m
if(m!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=z/m
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 09:53:52) 
-- CODE:
a=float(input("digite um valor: "))
b=float(input("digite um valor: "))
c=float(input("digite um valor: "))
d=float(input("digite um valor: "))
e=float(input("digite um valor: "))
f=float(input("digite um valor: "))
z=(c*e-b*f)
v=(a*f-c*d)
m=(a*e-b*d)
x=z/m
y=v/m
if(m!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    x=z/m
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 09:54:03) 
-- CODE:
a=float(input("digite um valor: "))
b=float(input("digite um valor: "))
c=float(input("digite um valor: "))
d=float(input("digite um valor: "))
e=float(input("digite um valor: "))
f=float(input("digite um valor: "))
z=(c*e-b*f)
v=(a*f-c*d)
m=(a*e-b*d)
x=z/m
y=v/m
if(m!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.168169
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 10, in <module>
    x=z/m
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 09:58:47) 
-- CODE:
a=float(input("digite um valor: "))
b=float(input("digite um valor: "))
c=float(input("digite um valor: "))
d=float(input("digite um valor: "))
e=float(input("digite um valor: "))
f=float(input("digite um valor: "))
m=(a*e-b*d)
x=(c*e-b*f)/m
y=(a*f-c*d)/m
if(m!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.139264
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 8, in <module>
    x=(c*e-b*f)/m
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 09:59:43) 
-- CODE:
a=float(input("digite um valor: "))
b=float(input("digite um valor: "))
c=float(input("digite um valor: "))
d=float(input("digite um valor: "))
e=float(input("digite um valor: "))
f=float(input("digite um valor: "))
m=(a*e-b*d)
x=(c*e-b*f)/m
y=(a*f-c*d)/m
if(m!=0):
	print(x)
	print(y)
else:
	mensagem="Nao tem solucao"
	print(mensagem)
-- EXECUTION TIME:
0.174051
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 8, in <module>
    x=(c*e-b*f)/m
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:00:12) 
-- CODE:
a=float(input("digite um valor: "))
b=float(input("digite um valor: "))
c=float(input("digite um valor: "))
d=float(input("digite um valor: "))
e=float(input("digite um valor: "))
f=float(input("digite um valor: "))
m=(a*e-b*d)
x=(c*e-b*f)/m
y=(a*f-c*d)/m
if(m!=0):
	print(x)
	print(y)
else:
	mensagem="Nao tem solucao"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=(c*e-b*f)/m
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:02:05) 
-- CODE:
a=float(input("digite um valor: "))
b=float(input("digite um valor: "))
c=float(input("digite um valor: "))
d=float(input("digite um valor: "))
e=float(input("digite um valor: "))
f=float(input("digite um valor: "))
m=(a*e-b*d)
x=(c*e-b*f)/m
y=(a*f-c*d)/m
if(m!=0):
	print(x)
	print(y)
else:
	mensagem="Nao tem solucao"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=(c*e-b*f)/m
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:03:10) 
-- CODE:
a=float(input("digite um valor: "))
b=float(input("digite um valor: "))
c=float(input("digite um valor: "))
d=float(input("digite um valor: "))
e=float(input("digite um valor: "))
f=float(input("digite um valor: "))
m=(a*e-b*d)
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(m!=0):
	print(x)
	print(y)
else:
	mensagem="Nao tem solucao"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:03:24) 
-- CODE:
a=float(input("digite um valor: "))
b=float(input("digite um valor: "))
c=float(input("digite um valor: "))
d=float(input("digite um valor: "))
e=float(input("digite um valor: "))
f=float(input("digite um valor: "))
m=(a*e-b*d)
x=(c*e-b*f)/(a*e-b*d)
y=(a*f-c*d)/(a*e-b*d)
if(m!=0):
	print(x)
	print(y)
else:
	mensagem="Nao tem solucao"
	print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 10:04:16) 
-- CODE:
a=float(input("digite um valor: "))
b=float(input("digite um valor: "))
c=float(input("digite um valor: "))
d=float(input("digite um valor: "))
e=float(input("digite um valor: "))
f=float(input("digite um valor: "))
m=(a*e-b*d)


if(m!=0):
	x=(c*e-b*f)/(a*e-b*d)
	y=(a*f-c*d)/(a*e-b*d)
	print(x)
	print(y)
else:
	mensagem="Nao tem solucao"
	print(mensagem)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 10:04:26) 
-- CODE:
a=float(input("digite um valor: "))
b=float(input("digite um valor: "))
c=float(input("digite um valor: "))
d=float(input("digite um valor: "))
e=float(input("digite um valor: "))
f=float(input("digite um valor: "))
m=(a*e-b*d)


if(m!=0):
	x=(c*e-b*f)/(a*e-b*d)
	y=(a*f-c*d)/(a*e-b*d)
	print(x)
	print(y)
else:
	mensagem="Nao tem solucao"
	print(mensagem)
-- EXECUTION TIME:
0.169551
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
